basic maps and comunidades

--- a/www/templates/comunidad.html
+++ b/www/templates/comunidad.html
@@ -1,6 +1,15 @@
 <ion-view view-title="Comunidad">
   <ion-content>
-  	<ion-item></ion-item>
-  	
+  	<ion-item>
+
+  <h1> {{datos.nombre}}</h1>
+
+
+
+  <h2> {{datos.detalle}}</h2>
+
+
+  	</ion-item>
+
   </ion-content>
 </ion-view>
