Variable nombre por registro, arreglo de vistas, etc

--- a/www/templates/inicio.html
+++ b/www/templates/inicio.html
@@ -1,25 +1,15 @@
 <ion-view view-title="Inicio" class="titulo-vistas">
   <ion-content>
 	<div class="list card">
-	  <a class="item item-icon-left item-icon-right" href="#/app/comunidads">
-	    <i class="icon ion-ios-people"></i>
-	    Comunidades
-	    <i class="icon ion-chevron-right"></i>
-	  </a>
-	  <a class="item item-icon-left item-icon-right" href="#/app/servicios">
-	    <i class="icon ion-ios-briefcase"></i>
-	    Servicios
-	    <i class="icon ion-chevron-right"></i>
-	  </a>
-	</div>
-	<ion-nav-view></ion-nav-view>
+		<div class="button-bar">
+		  <a class="button button-balanced" href="#/app/comunidads"><i class="icon ion-ios-people"></i>
+	    Comunidades</i></a>
+		  <a class="button button-positive" href="#/app/servicios"><i class="icon ion-ios-briefcase"></i>
+	    Servicios</a>
+		</div>
 
-    <script id="templates/rating.html" type="text/ng-template">
-      <ion-view view-title="Home">
-        <ion-content class="padding">
-          <rating ng-model="data.rating" max="data.max" ></rating>
-        </ion-content>
-      </ion-view>
-    </script>
+	  <a class="button button-block button-assertive" href="#/app/tab-map"><i class="icon ion-map"></i>
+	    Mapa Swarmy</i></a>
+	</div>
   </ion-content>
 </ion-view>
