--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -24,13 +24,13 @@
         <ion-item class="menu-persona">
           <i class="ion-person"></i>
           <br>
-          Javier Fuentes
+          {{input.nombreUsuario}}
         </ion-item>
         <ion-item menu-close href="#/app/inicio">
           <span class="ion-home"></span>
           Inicio
         </ion-item>
-        <ion-item menu-close href="#/app/comunidades">
+        <ion-item menu-close href="#/app/comunidads">
           <span class="ion-chatbubble"></span>
           Comunidad
         </ion-item>
