--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,7 +1,7 @@
 /* Empty. Add your own CSS if you like */
 .menu-persona {
-	background-color: #0058cb;
-    color: white;
+	background-color: #0058cb !important;
+    color: white !important;
 }
 .menu-persona > i {
 	font-size: 3em;
@@ -85,3 +85,11 @@ ul.rating li i {
     width: 100%;
     height: 100%;
 }	
+
+.button-bar > .button{
+    padding: 36px 16px !important;
+}
+
+.button.button-block, .button.button-full {
+    padding: 13px !important;
+}
