--- a/www/templates/comunidads.html
+++ b/www/templates/comunidads.html
@@ -8,7 +8,7 @@
   </div>
     <div class="list card">
       <ion-item ng-repeat="comunidad in comunidads" href="#/app/comunidads/{{comunidad.id}}">
-        {{comunidad.imagen} {{comunidad.title}}
+        {{comunidad.title}}
       </ion-item>
     </div>
     <button class="button button-block button-positive">
