--- a/www/templates/estadio.html
+++ b/www/templates/estadio.html
@@ -16,7 +16,7 @@
 	  <a class="item item-icon-left ">
 	    <i class="icon ion-at"></i>
 	    Consulta actividades <a href="http://www.vrae.usach.cl/departamento-de-gestion-del-deporte-y-cultura"> aquí</a >
-
-	  </a>
+	</a>
+	  <rating ng-model="data.rating" max="data.max" ></rating>
 	</div>
 </ion-view>
