--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -5,7 +5,7 @@
     <i class="icon ion-search placeholder-icon"></i>
     <input type="text" placeholder="Buscar">
   </label>
-</div>
-	<a class=" center button icon-right ion-chevron-right button-calm">Agregar filtros</a>
+</div class="container">
+	<a class=" center button button-block icon-right ion-chevron-right button-calm">Agregar filtros</a>
   </ion-content>
 </ion-view>
