--- a/www/templates/splash.html
+++ b/www/templates/splash.html
@@ -22,7 +22,7 @@
 <ion-footer-bar align-title="left" class="bar-assertive">
   <h1 class="title">Iniciar con Google</h1>
   <div class="buttons" ng-click="doSomething()">
-    <a class="button" href="#/app/inicio">
+    <a class="button" href="#/registro">
     	&nbsp;&nbsp;<i class="ion-social-googleplus splash-footer-icon"></i>&nbsp;&nbsp;
     </a>
   </div>
