--- a/www/templates/tab-map.html
+++ b/www/templates/tab-map.html
@@ -1,6 +1,4 @@
-
-
-<ion-view>
+<ion-view view-title="Mapa Swarmy">
     <ion-content>
         <div id="map" data-tap-disabled="true"></div>
     </ion-content>
