--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -34,7 +34,7 @@
           <span class="ion-chatbubble"></span>
           Comunidad
         </ion-item>
-        <ion-item menu-close href="#/app/browse">
+        <ion-item menu-close href="#/app/notificacion">
           <span class="ion-android-notifications"></span>
           Notificaciones
         </ion-item>
