--- a/www/templates/notificacion.html
+++ b/www/templates/notificacion.html
@@ -5,10 +5,13 @@
         <i class="icon ion-ios-people"></i>
         Notificaciones
       </a>
-
-      <button class="button" ng-click="doSomething()">
-      Nueva notificacion ++
-      </button>
+      </div>
+      <div class="list card">
+      <div class="button-bar">
+      <a class="button button-l" href="#/app/crearNotificacion" ><i class="icon ion-plus"></i>
+      Nueva notificacion 
+      </a>
+      </div>
     </div>
 
     <div class="list card">
@@ -17,8 +20,7 @@
         {{noti.contenido}}
       </ion-item>
     </div>
-
-
-
   </ion-content>
+
 </ion-view>
+
