--- a/www/templates/comunidads.html
+++ b/www/templates/comunidads.html
@@ -11,12 +11,20 @@
         {{comunidad.nombre}}
       </ion-item>
     </div>
-    <button class="button button-block button-positive">
+    <div class="list card">
+        <div class="button-bar">
+    <a class="button button-l button-positive">
       Buscar Comunidades
-    </button>
-    <button class="button button-block button-positive">
+    </a>
+    </div>
+    </div>
+    <div class="list card">
+        <div class="button-bar">
+    <a class="button button-l button-positive" href="#/app/crearComunidad">
       Crear Comunidad
-    </button>
+    </a>
+    </div>
+    </div>
   </ion-content>
 
 </ion-view>
