--- a/www/templates/comunidad.html
+++ b/www/templates/comunidad.html
@@ -14,30 +14,7 @@
 
 
     <div ng-repeat="message in messages" class="message-wrapper disable-user-behavior">
-      <div ng-if="message.style == false" class="log">{{message.content}}</div>
-      <div ng-if="user.name !== message.username && message.style != false">
-        <img ng-src="img/avatar.jpg"
-             class="profile-pic left" >
-        <div class="chat-bubble left">
-          <div class="message ng-binding">{{message.content}}</div>
-          <div class="message-detail">
-            <span ng-click="viewProfile(chat)" class="bold ng-binding">{{message.username}}</span>
-            <span>{{message.createdAt}}</span>
-          </div>
-        </div>
-      </div>
-      <div ng-if="user.name === message.username && message.style != false">
-        <img ng-src="img/avatar.jpg"
-             class="profile-pic right" >
-        <div class="chat-bubble right">
-          <div class="message ng-binding">{{message.content}}</div>
-          <div class="message-detail">
-            <span ng-click="viewProfile(chat)" class="bold ng-binding">{{message.username}}</span>
-            <span>{{message.createdAt}}</span>
-          </div>
-        </div>
-      </div>
-      <div class="cf"></div>
+      {{message.message}}
     </div>
 
 
@@ -49,7 +26,7 @@
               <input class="line-light-grey" ng-change="updateTyping()" type="text"  placeholder="Message" ng-enter="sendMessage()" ng-model="message">
             </label>
             <div >
-              <button class="button button-energized" ng-click="sendMessage()"></button>
+              <button class="button button-energized" ng-click="sendMessage()"> oli </button>
             </div>
           </div>
       </div>
