--- a/www/templates/comunidads.html
+++ b/www/templates/comunidads.html
@@ -9,6 +9,7 @@
     <div class="list card">
       <ion-item ng-repeat="comunidad in comunidads" href="#/app/comunidads/{{comunidad.id}}">
         {{comunidad.nombre}}
+        {{comunidad.detalle}}
       </ion-item>
     </div>
     <div class="list card">
